test/static/wrong/duplicate3a.kk
// duplicate constructor
type dup1 { Dup1(:int) }
type dup2 { Dup1(:int) }
